--- a/GDemo/Foundation/SelectViewController.xib
+++ b/GDemo/Foundation/SelectViewController.xib
@@ -128,7 +128,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">FourthViewController</string>
+				<string key="-1.CustomClassName">SelectViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -143,11 +143,11 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">FourthViewController</string>
+					<string key="className">SelectViewController</string>
 					<string key="superclassName">UITableViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FourthViewController.h</string>
+						<string key="minorKey">./Classes/SelectViewController.h</string>
 					</object>
 				</object>
 			</array>
